remove feedback and prevent x overflow

--- a/src/components/base.css
+++ b/src/components/base.css
@@ -3,6 +3,7 @@
 
 .App {
     text-align: center;
+    overflow-x: hidden;
   }
   
   .App-logo {
@@ -41,12 +42,17 @@
     width: 70%;
     margin: auto;
     text-align: center;
+    height: 80%;  }
+
+  .subscribe-text{
+    width: 70%;
+    margin: auto;
+    text-align: center;
   }
 
   .about-body{
     /* background-color: #282c34; */
     background-color: white;
-   
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,8 +69,8 @@
     position: fixed;
     width: 100%;
     max-height: 6vh;
-    -webkit-backdrop-filter: blur(15px);
-    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(30px);
+    backdrop-filter: blur(30px);
     z-index: 10000;
     transition: 300ms;
     color: black;
@@ -154,7 +160,7 @@
     background-color: rgba(255, 255, 255, 0.615);
     border: 1px solid rgba(255,255,255,0.1);
     border-radius: 10px;
-    width: 30%;
+
     color: white;
     margin-top: 1%;
   }
@@ -162,14 +168,11 @@
   [type="submit"] {
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
     background:rgba(0, 122, 255, 1);
-    border-radius:3
-    0px;
     border:0;
     cursor:pointer;
     color:white;
     font-size:24px;
-    padding-top:10px;
-    padding-bottom:10px;
+    padding: 10px;
     transition: all 0.2s;
     margin-top:-4px;
     font-weight:700;
@@ -254,6 +257,45 @@
         text-align: left;
         color: black;
     }
+
+  .blue-button{
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    background:rgba(0, 122, 255, 1);
+    border:0;
+    cursor:pointer;
+    color:white;
+    font-size:24px;
+    padding-top:10px;
+    padding-bottom:10px;
+    transition: all 0.2s;
+    font-weight:700;
+    text-decoration: none;
+    align-self: center;
+    border-radius: 10px;
+    width: 30%;
+    margin-top: 100%;
+  }
+
+
+
+  .feedback{
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    background:rgba(0, 122, 255, 1);
+    border-radius:10px;
+    cursor:pointer;
+    color:white;
+    text-decoration: none;
+    margin: 10px;
+    padding: 10px;
+    font-weight:700;
+    font-size:24px;
+    width: 30%;
+    transition: all 0.2s;
+  }
+
+  .feedback:hover { 
+    background:rgba(10, 132, 255, 1)
+  }
   
   .App-body {
     /* background-image:radial-gradient(#5174f1, #94bbe9); */
@@ -315,9 +357,6 @@
       display: none;
     }
 
-    .form-submit{
-      width: 50%;
-    }
 
     .form-container{
       width: 80%;
